<resources>
    <string name="app_name">LAYLA</string>

    <!-- Common general strings -->
    <string name="success">Success</string>
    <string name="change">Change</string>
    <string name="confirm">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="LAYLA">LAYLA</string>
    <string name="noInternet">No Internet access</string>
    <string name="refresh">Refresh</string>
    <string name="more">More</string>

    <!-- SignUp, Login, Reset password activities-->
    <string name="signUp_enterEmail">Enter email address</string>
    <string name="signUp_enterUsername">Enter username</string>
    <string name="signUp_enterPassword">Enter password</string>
    <string name="signUp_passwordShort">Password too short, enter minimum 6 characters</string>

    <string name="login_fingerprintUnknown">Fingerprint not recognized, try again</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now</string>
    <string name="btn_link_to_login">Already registered. Login Me</string>
    <string name="logout_success">"Successfully logout"</string>

    <!--Parse server-->
    <string name="parse_app_id">ed27f8b32bcae4823258606d1f059228db9839dd</string>
    <string name="parse_client_key">07bed1deda6b12c4ea3b51e9a722eeeaf8d4d414</string>

    <!-- Patient's menu strings-->
    <string name="gps">GPS</string>
    <string name="notice">Notice</string>
    <string name="_3opt">3Opt</string>
    <string name="_4opt">4Opt</string>

    <string name="slide_1_title">GPS</string>
    <string name="slide_1_desc">The way to find you</string>
    <string name="slide_2_title">Notebook</string>
    <string name="slide_2_desc">Tell us what you feel</string>
    <string name="slide_3_title">Chat</string>
    <string name="slide_3_desc">Talk with your doctor</string>
    <string name="slide_4_title">Settings</string>
    <string name="slide_4_desc">Change your settings</string>

    <!-- Supervisor's menu strings-->
    <string name="DOCTORslide_1_title">GPS</string>
    <string name="DOCTORslide_1_desc">Patients location</string>
    <string name="DOCTORslide_2_title">Notebook</string>
    <string name="DOCTORslide_2_desc">List of patients</string>
    <string name="DOCTORslide_3_title">Chat</string>
    <string name="DOCTORslide_3_desc">Talk with your patient</string>
    <string name="DOCTORslide_4_title">Settings</string>
    <string name="DOCTORslide_4_desc">Change your settings</string>

    <!-- Chat activity -->
    <string name="btn_send">Send</string>
    <string name="chat_with">Chat with </string>

    <!-- Activities-->
    <string name="title_activity_welcome">Login</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_gps">GPS</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_patient_search">Patient location</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_menuPatient">Patient Menu</string>
    <string name="title_activity_listPatient">Patient List</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_change_doctor">Change a doctor</string>
    <string name="title_activity_submit_doctor">Submit a doctor</string>
    <string name="title_activity_change_password">Change a password</string>
    <string name="title_activity_settings_open">Open settings</string>

    <string name="unknown_address">Unknown address</string>

    <!-- Heartrate monitor -->
    <string name="heartRate_title">Heart rate</string>

    <!-- Note Editor menu -->
    <string name="mood_recognition">Evaluate mood</string>
    <string name="activities_result">Measuring results</string>
    <string name="hint_email">e-mail</string>
    <string name="reset_password">RESET</string>
    <string name="btn_link_to_reset">You don\'t remember a password? Reset it</string>
    <string name="back_to_login">Back to login</string>
    <string name="title_activity_heart_rate">Heart rate</string>
    <string name="noteEditor_writeNote">Write a note</string>
    <string name="notebook_title">Notebook</string>

    <!-- Face recognition -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_face_recognition">Face recognition</string>
    <string name="default_text">--</string>

    <!-- Submit doctor -->
    <string name="submitDoctor_submit">Submit your doctor</string>
    <string name="submitDoctor_enterName">Enter your doctor name</string>
    <string name="submitDoctor_noSuchDoctor">Doctor with such name does not exist</string>
    
    <!-- Change doctor -->
    <string name="changeDoctor_previousDoctor">Previous doctor</string>
    <string name="changeDoctor_newDoctor">New doctor</string>
    <string name="changeDoctor_emptyPreviousDoctor">Enter previous doctor</string>
    <string name="changeDoctor_emptyNewDoctor">Enter new doctor</string>
    <string name="changeDoctor">Change doctor</string>
    <string name="changeDoctor_doctorName">Doctor name</string>

    <!-- Change password -->
    <string name="changePassword_submit">Submit</string>
    <string name="changePassword_password">Password</string>
    <string name="changePassword_repeatPassword">Repeat password</string>
    <string name="changePassword_enterPassword">Enter your password</string>
    <string name="changePassword_passwordsDifferent">Passwords are not equal</string>
    <string name="changePassword">Change password</string>

    <!-- Reset password -->
    <string name="resetPassword_email">Enter email address!</string>

    <!-- Delete account -->
    <string name="deleteAccount_message">Do you want to delete your account? All stored information will be lost.</string>
    <string name="deleteAccount_deleteSuccessful">Your account was deleted!</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_deletePatient">Delete a patient</string>
    <string name="settings_changePassword">Change password</string>
    <string name="settings_changeDoctor">Change doctor</string>
    <string name="settings_deleteAccount">Delete account</string>
    <string name="settings_aboutUs">About us</string>
    <string name="settings_login">Change settings</string>
    <string name="settings_open">Open settings</string>

    <!-- Different moods -->
    <string name="mood1">1/7</string>
    <string name="mood2">2/7</string>
    <string name="mood3">3/7</string>
    <string name="mood4">4/7</string>
    <string name="mood5">5/7</string>
    <string name="mood6">6/7</string>
    <string name="mood7">7/7</string>
    <string name="backToMenu">Back!</string>

    <string name="readNote">Read notes!</string>
    <string name="title_activity_note_reader">Read a note from a patient</string>
    <string name="hot_button_one">Call parent</string>
    <string name="hot_button_two">Call supervisor</string>
    <string name="hot_button_three">Call doctor</string>
    <string name="hot_button_four">Chat with doctor</string>
    <string name="classic_login">Classic login</string>
    <string name="chat_hot_buttons">Hot buttons</string>
    <string name="emergency_data_toolbar">Emergency data</string>
    <string name="type_parent_number">Type parent number</string>
    <string name="type_supervisors_number">Type supervisor\'s number</string>
    <string name="type_doctors_number">Type doctor\'s number</string>
    <string name="fill_hot_buttons">Fill hot buttons!</string>
    <string name="fingerprint_login">Fingerprint login</string>
    <string name="change_hot_numbers">Change numbers</string>

</resources>
