<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.layla.GridMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:textStyle="italic"
            android:theme="@style/MyActionBarTheme"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/button1"

                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_column="0"

                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:background="@color/bg_screen1"
                android:drawableTop="@drawable/ic_location_loop"
                android:text="@string/slide_1_title"

                android:textColor="#e8e9e9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button2"

                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_column="1"

                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:background="@color/bg_screen2"
                android:drawableTop="@drawable/ic_notebook_mood"
                android:text="@string/slide_2_title"

                android:textColor="#e8e9e9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button3"

                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_column="0"

                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:background="@color/bg_screen3"
                android:drawableTop="@drawable/ic_chat"
                android:text="@string/slide_3_title"

                android:textColor="#e8e9e9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button4"

                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_column="1"

                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:background="@color/bg_screen4"
                android:drawableTop="@drawable/ic_settings_loop"
                android:text="@string/slide_4_title"

                android:textColor="#e8e9e9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button5"

                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_column="0"

                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:background="@color/bg_screen2"
                android:drawableTop="@drawable/ic_emergency_loop"
                android:text="Emergency Data"
                android:textColor="#e8e9e9"

                android:textSize="20sp" />

            <Button
                android:id="@+id/button6"

                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_column="1"

                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:background="@color/bg_screen1"
                android:drawableTop="@drawable/ic_close_128dp"
                android:text="Close"
                android:textColor="#e8e9e9"

                android:textSize="20sp" />

        </GridLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>